--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,30 +1,113 @@
 .hero__title {
-  font-weight: 900;
   font-family: var(--main-font);
-  font-size: 44px;
-  line-height: 1.36;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 42px;
+  max-width: 360px;
+  margin: 0 auto;
   text-align: center;
-  letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
+  letter-spacing: 0.06em;
   color: var(--primary-white-color);
-  max-width: 696px;
-  margin: 0 auto;
-  margin-bottom: 50px;
 }
 
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  text-align: center;
-  max-width: 1600px;
+  padding-top: 118px;
+  padding-bottom: 198px;
+  align-items: center;
   margin: 0 auto;
   background-color: var(--footer-background-color);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/hero/hero.jpg);
+    url("../images/hero/hero-480.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../images/hero/hero-480@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero/hero-768.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero {
+      background-image: url("../images/hero/hero-768@2x.jpg");
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero/hero-1200.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero {
+      background-image: url("../images/hero/hero-1200@2x.jpg");
+    }
+  }
+}
+
+// @media screen and (min-width: 1200px) {
+//   .hero {
+//     max-width: 696px;
+//   }
+// }
+
+// .hero__title {
+//   font-weight: 900;
+//   font-family: var(--main-font);
+//   font-size: 44px;
+//   line-height: 1.36;
+//   text-align: center;
+//   letter-spacing: 0.06em;
+//   text-transform: uppercase;
+//   margin-bottom: 30px;
+//   color: var(--primary-white-color);
+//   max-width: 696px;
+//   margin: 0 auto;
+//   margin-bottom: 50px;
+// }
+
+// .hero {
+//   padding-top: 200px;
+//   padding-bottom: 200px;
+//   text-align: center;
+//   max-width: 1600px;
+//   margin: 0 auto;
+//   background-color: var(--footer-background-color);
+//   background-image: linear-gradient(
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url(../images/hero/hero.jpg);
+//   background-repeat: no-repeat;
+//   background-size: cover;
+// }
