--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -244,6 +244,11 @@ img {
     display: -ms-flexbox;
     display: flex;
   }
+  .contact__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
   .menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -269,26 +274,16 @@ img {
   .menu__link:focus {
     color: var(--accent-color);
   }
-  .current {
-    color: var(--accent-color);
-  }
 }
 
-.contact {
-  margin-left: auto;
-}
-
-.contact__link {
-  margin-bottom: 10px;
-}
-
-.menu .current {
+.current {
   position: relative;
   display: inline;
-  padding-bottom: 32px;
+  color: var(--accent-color);
+  padding-bottom: 34px;
 }
 
-.menu .current::after {
+.current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -297,6 +292,15 @@ img {
   height: 4px;
   display: block;
   background-color: var(--accent-color);
+}
+
+@media screen and (max-width: 1199px) {
+  .contact {
+    margin-left: auto;
+  }
+  .contact__link {
+    margin-bottom: 10px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -312,25 +316,110 @@ img {
   .menu__item:not(:last-child) {
     margin-right: 50px;
   }
-}
-
-.menu .current {
-  position: relative;
-  padding-bottom: 32px;
-}
-
-.menu .current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 4px;
-  display: block;
-  background-color: var(--accent-color);
+  .contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .contact__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 @media screen and (min-width: 768px) {
+  .contact__link {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--accent-text-color);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact__link:hover, .contact__link:focus {
+    color: var(--accent-color);
+  }
+  .contact__icon {
+    margin-right: 8px;
+    fill: var(--accent-text-color);
+    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact__link:hover .contact__icon,
+  .contact__link:focus .contact__icon {
+    fill: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact__link {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--accent-text-color);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact__link:hover, .contact__link:focus {
+    color: var(--accent-color);
+  }
+  .contact__icon {
+    margin-right: 10px;
+    fill: var(--accent-text-color);
+    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact__link:hover .contact__icon,
+  .contact__link:focus .contact__icon {
+    fill: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contact__link {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--accent-text-color);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact__link:hover, .contact__link:focus {
+    color: var(--accent-color);
+  }
+  .contact__icon {
+    margin-right: 8px;
+    fill: var(--accent-text-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .contact__link {
     font-size: 14px;
     font-weight: 500;
@@ -353,8 +442,14 @@ img {
     color: var(--accent-color);
   }
   .contact__icon {
-    margin-right: 8px;
+    margin-right: 10px;
     fill: var(--accent-text-color);
+    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact__link:hover .contact__icon,
+  .contact__link:focus .contact__icon {
+    fill: var(--accent-color);
   }
 }
 
@@ -707,6 +802,7 @@ img {
   .header {
     padding-top: 26px;
     padding-bottom: 26px;
+    border-bottom: 1px solid #ececec;
   }
 }
 
