--- a/sass/components/_mail.scss
+++ b/sass/components/_mail.scss
@@ -1,25 +1,51 @@
-// .contact__link {
-//   @include contact-link(14px, 500, 16px);
-//   color: var(--accent-text-color);
-//   /*margin-left: auto;
-//   margin-right: 40px;*/
-//   display: flex;
-//   align-items: center;
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) {
+  .contact__link {
+    @include contact-link(14px, 500, 16px);
+    color: var(--accent-text-color);
+    display: flex;
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
 
-// .contact__icon {
-//   margin-right: 10px;
-//   fill: var(--accent-text-color);
-//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .contact__icon {
+    margin-right: 8px;
+    fill: var(--accent-text-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-//   .contact__link:hover &,
-//   .contact__link:focus & {
-//     fill: var(--accent-color);
-//   }
-// }
+    .contact__link:hover &,
+    .contact__link:focus & {
+      fill: var(--accent-color);
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact__link {
+    @include contact-link(14px, 500, 16px);
+    color: var(--accent-text-color);
+    display: flex;
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
+
+  .contact__icon {
+    margin-right: 10px;
+    fill: var(--accent-text-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .contact__link:hover &,
+    .contact__link:focus & {
+      fill: var(--accent-color);
+    }
+  }
+}
