--- a/sass/components/_navigation-header.scss
+++ b/sass/components/_navigation-header.scss
@@ -156,10 +156,13 @@
     display: flex;
   }
 
+  .contact__item {
+    display: flex;
+  }
+
   .menu {
     display: flex;
     align-items: center;
-
     margin-left: 88px;
   }
 
@@ -182,24 +185,13 @@
   .menu__link:focus {
     color: var(--accent-color);
   }
-
-  .current {
-    color: var(--accent-color);
-  }
 }
 
-.contact {
-  margin-left: auto;
-}
-
-.contact__link {
-  margin-bottom: 10px;
-}
-
-.menu .current {
+.current {
   position: relative;
   display: inline;
-  padding-bottom: 32px;
+  color: var(--accent-color);
+  padding-bottom: 34px;
 
   &::after {
     content: "";
@@ -211,6 +203,15 @@
     height: 4px;
     display: block;
     background-color: var(--accent-color);
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .contact {
+    margin-left: auto;
+  }
+  .contact__link {
+    margin-bottom: 10px;
   }
 }
 
@@ -226,22 +227,15 @@
       margin-right: 50px;
     }
   }
-}
 
-.menu .current {
-  position: relative;
-  padding-bottom: 32px;
+  .contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-  &::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-
-    width: 100%;
-    height: 4px;
-    display: block;
-    background-color: var(--accent-color);
+  .contact__item:not(:last-child) {
+    margin-right: 30px;
   }
 }
 
@@ -279,21 +273,4 @@
 
 // .current {
 //   color: var(--accent-color);
-// }
-
-// .menu .current {
-//   position: relative;
-//   padding-bottom: 32px;
-
-//   &::after {
-//     content: "";
-//     position: absolute;
-//     left: 0;
-//     bottom: 0;
-
-//     width: 100%;
-//     height: 4px;
-//     display: block;
-//     background-color: var(--accent-color);
-//   }
 // }
