--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -60,6 +60,7 @@ img {
 }
 
 .container {
+  width: 100%;
   padding-right: 15px;
   padding-left: 15px;
 }
@@ -299,6 +300,7 @@ img {
     margin-left: auto;
   }
   .contact__link {
+    margin-top: 5px;
     margin-bottom: 10px;
   }
 }
@@ -458,7 +460,22 @@ img {
 }
 
 .location {
-  margin-right: 70px;
+  max-width: 231px;
+  width: 100%;
+  text-align: center;
+}
+
+@media screen and (max-width: 1199px) {
+  .location {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .location {
+    margin-right: 70px;
+    text-align: start;
+  }
 }
 
 .logo {
@@ -484,18 +501,10 @@ img {
   font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  /*font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;*/
   text-transform: uppercase;
   color: var(--primary-white-color);
   display: block;
   margin-bottom: 20px;
-}
-
-.subscription {
-  margin-left: 93px;
 }
 
 .input {
@@ -566,26 +575,44 @@ img {
   margin-bottom: 9px;
 }
 
+.appeal {
+  max-width: 206px;
+  width: 100%;
+}
+
+@media screen and (max-width: 1199px) {
+  .appeal {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .appeal {
+    margin-right: 89px;
+  }
+}
+
 .apeal__title {
   font-family: var(--main-font);
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  /*font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;*/
   text-transform: uppercase;
   color: var(--primary-white-color);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-bottom: 20px;
+  display: block;
 }
 
 .footer-social__item:not(:last-child) {
   margin-right: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer-social__list {
+    margin-top: 20px;
+  }
 }
 
 .contact-adress {
@@ -791,6 +818,37 @@ img {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__container {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 
 .header {
