--- a/sass/components/_footer-adress.scss
+++ b/sass/components/_footer-adress.scss
@@ -4,23 +4,40 @@
   }
 }
 
+.appeal {
+  max-width: 206px;
+  width: 100%;
+
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 89px;
+  }
+}
+
 .apeal__title {
   font-family: var(--main-font);
   @include title(14px, 700, 16px);
-
-  /*font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;*/
   text-transform: uppercase;
   color: var(--primary-white-color);
-  display: flex;
   margin-bottom: 20px;
+  // text-align: center;
+
+  display: block;
 }
 
 .footer-social__item {
   &:not(:last-child) {
     margin-right: 10px;
+  }
+}
+
+.footer-social__list {
+  @media screen and (max-width: 767px) {
+    margin-top: 20px;
   }
 }
 
