--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,19 +1,11 @@
 .subscription__title {
   font-family: var(--main-font);
   @include title(14px, 700, 16px);
-  /*font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;*/
   text-transform: uppercase;
   color: var(--primary-white-color);
 
   display: block;
   margin-bottom: 20px;
-}
-
-.subscription {
-  margin-left: 93px;
 }
 
 .input {
@@ -34,6 +26,11 @@
   margin-right: 12px;
 
   color: var(--primary-white-color);
+  // @media screen and (max-width: 767px) {
+  //   width: 450px;
+  //   margin-bottom: 20px;
+  // }
+
   width: 358px;
   height: 50px;
 
