--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,7 +3,17 @@
 }
 
 .location {
-  margin-right: 70px;
+  max-width: 231px;
+  width: 100%;
+  text-align: center;
+
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+    text-align: start;
+  }
 }
 
 .logo {
