--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,4 +7,18 @@
 .footer__container {
   display: flex;
   align-items: baseline;
+
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  @media screen and (min-width: 768px) {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    // justify-content: space-between;
+  }
 }
