--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -57,6 +57,11 @@
 
 @media screen and (min-width: 1200px) {
   .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+
+  .hero {
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
