--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -15,15 +15,24 @@
 }
 
 .team__list {
-  display: flex;
+  // display: flex;
   margin-left: -30px;
   margin-top: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .team__item {
   margin-left: 30px;
   margin-top: 30px;
-  flex-basis: calc(100% / 4 - 30px);
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+  }
 }
 
 .team__card {
