--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,40 +1,44 @@
-.work__list {
-  display: flex;
-  margin-left: -30px;
-  margin-top: -30px;
+@media screen and (max-width: 1199px) {
+  .work {
+    display: none;
+  }
 }
 
-.work__item {
-  margin-left: 30px;
-  margin-top: 30px;
-  flex-basis: calc(100% / 3 - 30px);
-}
+@media screen and (min-width: 1200px) {
+  .work__list {
+    display: flex;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 
-.work__thumb {
-  position: relative;
-}
+  .work__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 3 - 30px);
+  }
 
-.work {
-  padding-bottom: 94px;
-}
+  .work__thumb {
+    position: relative;
+  }
 
-.work__subtitle {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  .work {
+    padding-bottom: 94px;
+  }
 
-  width: 370px;
-  height: 70px;
-  padding-top: 27px;
-  background: rgba(47, 48, 58, 0.8);
+  .work__subtitle {
+    position: absolute;
+    bottom: 0;
+    left: 0;
 
-  font-family: var(--main-font);
-  @include title(14px, 700, 16px);
-  /*font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;*/
-  /*letter-spacing: 0.03em;*/
-  text-align: center;
-  text-transform: uppercase;
-  color: #ffffff;
+    width: 370px;
+    height: 70px;
+    padding-top: 27px;
+    background: rgba(47, 48, 58, 0.8);
+
+    font-family: var(--main-font);
+    @include title(14px, 700, 16px);
+    text-align: center;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
 }
