--- a/sass/components/_filters-services.scss
+++ b/sass/components/_filters-services.scss
@@ -29,11 +29,29 @@
 
 .filter-projects__list {
   display: flex;
-  justify-content: center;
   margin-bottom: 50px;
   align-items: center;
+  margin-bottom: 40px;
+
+  @media screen and (max-width: 767px) {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .filter-projects__item:not(:last-child) {
   margin-right: 8px;
 }
+
+// .filter-projects__item (-n + 3) {
+//   margin-bottom: 15px;
+// }
