--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -73,12 +73,17 @@
 
   font-family: var(--main-font);
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
-
   margin-bottom: 30px;
+  @media screen and (max-width: 1199px) {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 
   &::before {
     content: "";
@@ -121,18 +126,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  max-width: 200px;
+  height: 50px;
+  margin: 0 auto;
 
   padding: 10px 55px;
   text-align: center;
 
   font-family: var(--main-font);
   @include button(16px, 700, 30px);
-  /*font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;*/
-  margin: 0 auto;
-
   color: #ffffff;
   background: var(--accent-color);
 
