--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -48,8 +48,13 @@
 }
 
 .filter-projects {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .card__overlay {
