--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -75,7 +75,6 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  outline: 1px solid red;
 }
 
 @media screen and (min-width: 480px) {
@@ -130,6 +129,8 @@ img {
     transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+    z-index: 1;
   }
   .mobile-menu__close-button {
     position: absolute;
@@ -142,12 +143,13 @@ img {
   .is-open {
     -webkit-transform: translateY(0) translateX(-50%);
             transform: translateY(0) translateX(-50%);
+    opacity: 1;
   }
   .mobile-menu__link {
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 40px;
-    line-height: 47px;
+    line-height: 1.18;
     letter-spacing: 0.02em;
     color: var(--accent-title-color);
     -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -168,7 +170,7 @@ img {
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 34px;
-    line-height: 40px;
+    line-height: 1.18;
     letter-spacing: 0.02em;
     color: var(--accent-text-color);
     -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -178,7 +180,7 @@ img {
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 24px;
-    line-height: 28px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     color: var(--accent-text-color);
   }
@@ -201,7 +203,7 @@ img {
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 1.22;
     letter-spacing: 0.02em;
     color: var(--accent-color);
   }
@@ -605,7 +607,7 @@ img {
   }
 }
 
-.adress__item:not(:last-child) {
+.address__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
@@ -649,7 +651,7 @@ img {
   }
 }
 
-.contact-adress {
+.contact-address {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.71;
