--- a/sass/components/_footer-adress.scss
+++ b/sass/components/_footer-adress.scss
@@ -1,4 +1,4 @@
-.adress__item {
+.address__item {
   &:not(:last-child) {
     margin-bottom: 9px;
   }
@@ -41,7 +41,7 @@
   }
 }
 
-.contact-adress {
+.contact-address {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.71;
