--- a/sass/components/_navigation-header.scss
+++ b/sass/components/_navigation-header.scss
@@ -29,6 +29,8 @@
     background-color: var(--primary-white-color);
     transform: translateY(-100%) translateX(-50%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+    z-index: 1;
   }
 
   .mobile-menu__close-button {
@@ -43,13 +45,14 @@
 
   .is-open {
     transform: translateY(0) translateX(-50%);
+    opacity: 1;
   }
 
   .mobile-menu__link {
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 40px;
-    line-height: 47px;
+    line-height: 1.18;
     letter-spacing: 0.02em;
 
     color: var(--accent-title-color);
@@ -74,7 +77,7 @@
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 34px;
-    line-height: 40px;
+    line-height: 1.18;
 
     letter-spacing: 0.02em;
 
@@ -87,7 +90,7 @@
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 24px;
-    line-height: 28px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
 
     color: var(--accent-text-color);
@@ -111,7 +114,7 @@
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 1.22;
     letter-spacing: 0.02em;
 
     color: var(--accent-color);
