--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -11,9 +11,15 @@
 .social {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding-right: 32px;
-  padding-left: 32px;
+  justify-content: center;
+  padding-right: 74px;
+  padding-left: 74px;
+
+  @media screen and (min-width: 1200px) {
+    padding-right: 32px;
+    padding-left: 32px;
+    justify-content: space-around;
+  }
 }
 
 .social__link {
