--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,6 @@
 .hero__title {
   font-family: var(--main-font);
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 42px;
+  @include title(26px, 900, 42px, 0.06em);
   max-width: 360px;
   margin: 0 auto;
   text-align: center;
