--- a/css/main.css
+++ b/css/main.css
@@ -217,7 +217,6 @@ img {
     top: 0;
     left: 50%;
     width: 100vw;
-    max-width: 480px;
     height: 100vh;
     padding: 48px 40px;
     background-color: var(--primary-white-color);
@@ -229,6 +228,16 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     z-index: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .mobile-menu__close-button {
     position: absolute;
@@ -293,6 +302,7 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-top: 64px;
   }
   .mobile-menu__item:not(:last-child) {
     margin-bottom: 32px;
@@ -315,10 +325,6 @@ img {
     -webkit-transform: rotate(90deg);
             transform: rotate(90deg);
     color: var(--accent-text-color);
-  }
-  .contact-container {
-    margin-top: 302px;
-    margin-bottom: 64px;
   }
   .contact-menu__item:not(:last-child) {
     margin-bottom: 32px;
@@ -350,6 +356,15 @@ img {
     display: -ms-flexbox;
     display: flex;
   }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -387,7 +402,7 @@ img {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -32px;
+  bottom: -33px;
   width: 100%;
   height: 4px;
   display: block;
@@ -397,10 +412,6 @@ img {
 @media screen and (max-width: 1199px) {
   .contact {
     margin-left: auto;
-  }
-  .contact__link {
-    margin-top: 5px;
-    margin-bottom: 10px;
   }
 }
 
@@ -691,7 +702,6 @@ img {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  margin-right: 12px;
   color: var(--primary-white-color);
   width: 358px;
   height: 50px;
@@ -1090,8 +1100,8 @@ img {
 
 @media screen and (min-width: 768px) {
   .header {
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 23px;
+    padding-bottom: 21px;
     border-bottom: 1px solid #ececec;
   }
 }
@@ -1117,6 +1127,16 @@ img {
   margin-bottom: 30px;
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
+}
+
+@media screen and (min-width: 768px) {
+  .hero__title {
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    max-width: 696px;
+  }
 }
 
 .hero {
