--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -119,7 +119,6 @@ img {
     top: 0;
     left: 50%;
     width: 100vw;
-    max-width: 480px;
     height: 100vh;
     padding: 48px 40px;
     background-color: var(--primary-white-color);
@@ -131,6 +130,16 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     z-index: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .mobile-menu__close-button {
     position: absolute;
@@ -195,6 +204,7 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-top: 64px;
   }
   .mobile-menu__item:not(:last-child) {
     margin-bottom: 32px;
@@ -217,10 +227,6 @@ img {
     -webkit-transform: rotate(90deg);
             transform: rotate(90deg);
     color: var(--accent-text-color);
-  }
-  .contact-container {
-    margin-top: 302px;
-    margin-bottom: 64px;
   }
   .contact-menu__item:not(:last-child) {
     margin-bottom: 32px;
@@ -252,6 +258,15 @@ img {
     display: -ms-flexbox;
     display: flex;
   }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -289,7 +304,7 @@ img {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -32px;
+  bottom: -33px;
   width: 100%;
   height: 4px;
   display: block;
@@ -299,10 +314,6 @@ img {
 @media screen and (max-width: 1199px) {
   .contact {
     margin-left: auto;
-  }
-  .contact__link {
-    margin-top: 5px;
-    margin-bottom: 10px;
   }
 }
 
@@ -533,7 +544,6 @@ img {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  margin-right: 12px;
   color: var(--primary-white-color);
   width: 358px;
   height: 50px;
@@ -832,6 +842,10 @@ img {
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+.card__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
 @media screen and (min-width: 768px) {
   .card__item {
     margin-left: 30px;
@@ -947,8 +961,8 @@ img {
 
 @media screen and (min-width: 768px) {
   .header {
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 23px;
+    padding-bottom: 21px;
     border-bottom: 1px solid #ececec;
   }
 }
