--- a/sass/components/_navigation-header.scss
+++ b/sass/components/_navigation-header.scss
@@ -23,7 +23,7 @@
     top: 0;
     left: 50%;
     width: 100vw;
-    max-width: 480px;
+    // max-width: 480px;
     height: 100vh;
     padding: 48px 40px;
     background-color: var(--primary-white-color);
@@ -31,6 +31,10 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     z-index: 1;
+    // overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   .mobile-menu__close-button {
@@ -104,6 +108,7 @@
   .social-menu {
     display: flex;
     align-items: center;
+    margin-top: 64px;
   }
 
   .mobile-menu__item:not(:last-child) {
@@ -131,10 +136,10 @@
     color: var(--accent-text-color);
   }
 
-  .contact-container {
-    margin-top: 302px;
-    margin-bottom: 64px;
-  }
+  // .contact-container {
+  //   // margin-top: 302px;
+  //   // margin-bottom: 64px;
+  // }
 
   .contact-menu__item:not(:last-child) {
     margin-bottom: 32px;
@@ -160,6 +165,11 @@
   }
 
   .contact__item {
+    @media screen and (max-width: 1199px) {
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
+    }
     display: flex;
   }
 
@@ -199,7 +209,7 @@
     content: "";
     position: absolute;
     left: 0;
-    bottom: -32px;
+    bottom: -33px;
 
     width: 100%;
     height: 4px;
@@ -211,10 +221,6 @@
 @media screen and (max-width: 1199px) {
   .contact {
     margin-left: auto;
-  }
-  .contact__link {
-    margin-top: 5px;
-    margin-bottom: 10px;
   }
 }
 
