--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -52,6 +52,10 @@
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
   @media screen and (min-width: 768px) {
     margin-left: 30px;
     margin-top: 30px;
